--- a/config/locales/metadata/en.yml
+++ b/config/locales/metadata/en.yml
@@ -221,3 +221,25 @@ en:
       :assets:
         :specific_css_required: 1
         :specific_js_required: 1
+    winners:
+      :meta:
+        :title: 'OST | Partner Companies'
+        :description: 'The OST software platform helps businesses gain competitive advantage from blockchain and turn the potential of decentralization into reality.'
+        :canonical: '%{canonical}'
+        :keywords: 'OST, Simple Token, Utility Chain, Blockchain'
+        :name: 'OST'
+        :robots: 'index, follow'
+        :og:
+          :title: 'OST | Partner Companies'
+          :description: 'The OST software platform helps businesses gain competitive advantage from blockchain and turn the potential of decentralization into reality.'
+          :type: 'website'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-og-image-1.jpg'
+          :url: '%{og_url}'
+        :twitter:
+          :card: 'summary_large_image'
+          :title: 'OST | Partner Companies'
+          :description: 'The OST software platform helps businesses gain competitive advantage from blockchain and turn the potential of decentralization into reality.'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-og-image-1.jpg'
+      :assets:
+        :specific_css_required: 1
+        :specific_js_required: 1
