--- a/config/locales/metadata/en.yml
+++ b/config/locales/metadata/en.yml
@@ -3,21 +3,21 @@ en:
   web/ost:
     index:
       :meta:
-        :title: 'OST | Blockchain Infrastructure to Create New Economies'
+        :title: 'OST | Blockchain Infrastructure to Empower New Economies'
         :description: 'OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.'
         :canonical: '%{canonical}'
         :keywords: 'OST, Simple Token, Utility Chain, Blockchain'
         :name: 'OST'
         :robots: 'index, follow'
         :og:
-          :title: 'OST | Blockchain Infrastructure to Create New Economies'
+          :title: 'OST | Blockchain Infrastructure to Empower New Economies'
           :description: 'OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.'
           :type: 'website'
           :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-og-image-1.jpg'
           :url: '%{og_url}'
         :twitter:
           :card: 'summary_large_image'
-          :title: 'OST | Blockchain Infrastructure to Create New Economies'
+          :title: 'OST | Blockchain Infrastructure to Empower New Economies'
           :description: 'OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.'
           :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-og-image-1.jpg'
       :assets:
