--- a/config/locales/metadata/en.yml
+++ b/config/locales/metadata/en.yml
@@ -267,22 +267,22 @@ en:
         :specific_js_required: 1
     alpha3winners:
       :meta:
-        :title: 'OST | Dev Challenges'
-        :description:  'OST KIT⍺ Phase II was an opportunity for developers to build a Proof Of Concept coded integration between their product and the OST KIT blockchain toolkit.'
+        :title: 'OST | Alpha 3 Dev Challenge'
+        :description:  'OST ⍺ III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features.'
         :canonical: '%{canonical}'
-        :keywords:  'OST, Simple Token, OST Dev Challenge, Blockchain, OST POC'
+        :keywords:  'OST, Simple Token, OST Dev Challenge, Blockchain, OST POC, OST Wallet’'
         :name: 'OST'
         :robots: 'index, follow'
         :og:
-          :title: 'OST | Dev Challenges'
-          :description:  'OST KIT⍺ Phase II was an opportunity for developers to build a Proof Of Concept coded integration between their product and the OST KIT blockchain toolkit.'
+          :title: 'OST | Alpha 3 Dev Challenge'
+          :description:  'OST ⍺ III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features.'
           :type: 'website'
           :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winner-meta-data-image.jpg'
           :url: '%{og_url}'
         :twitter:
           :card: 'summary_large_image'
-          :title: 'OST | Dev Challenges'
-          :description:  'OST KIT⍺ Phase II was an opportunity for developers to build a Proof Of Concept coded integration between their product and the OST KIT blockchain toolkit.'
+          :title: 'OST | Alpha 3 Dev Challenge'
+          :description:  'OST ⍺ III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features.'
           :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winner-meta-data-image.jpg'
       :assets:
         :specific_css_required: 1
