--- a/config/locales/metadata/en.yml
+++ b/config/locales/metadata/en.yml
@@ -13,13 +13,13 @@ en:
           :title: 'OST | Blockchain Infrastructure to Empower New Economies'
           :description: 'OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.'
           :type: 'website'
-          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-og-image-1.jpg'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-index-og-image-2.png'
           :url: '%{og_url}'
         :twitter:
           :card: 'summary_large_image'
           :title: 'OST | Blockchain Infrastructure to Empower New Economies'
           :description: 'OST is a public blockchain platform for businesses with millions of users. Launch your own Branded Tokens and turn your business into a dynamic ecosystem.'
-          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-og-image-1.jpg'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-index-og-image-2.png'
       :assets:
         :specific_css_required: 1
         :specific_js_required: 1
@@ -233,13 +233,13 @@ en:
           :title: 'OST | Alpha 2 Dev Challenge'
           :description:  'OST KIT⍺ Phase II was an opportunity for developers to build a Proof Of Concept coded integration between their product and the OST KIT blockchain toolkit.'
           :type: 'website'
-          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winner-meta-data-image.jpg'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-winners-og-image-2.png'
           :url: '%{og_url}'
         :twitter:
           :card: 'summary_large_image'
           :title: 'OST | Alpha 2 Dev Challenge'
           :description:  'OST KIT⍺ Phase II was an opportunity for developers to build a Proof Of Concept coded integration between their product and the OST KIT blockchain toolkit.'
-          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winner-meta-data-image.jpg'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-winners-og-image-2.png'
       :assets:
         :specific_css_required: 1
         :specific_js_required: 1
@@ -277,13 +277,13 @@ en:
           :title: 'OST | Alpha 3 Dev Challenge'
           :description:  'OST ⍺ III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features.'
           :type: 'website'
-          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha3-winners-meta-data-image.jpg'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-alpha3-winners-og-image-2.png'
           :url: '%{og_url}'
         :twitter:
           :card: 'summary_large_image'
           :title: 'OST | Alpha 3 Dev Challenge'
           :description:  'OST ⍺ III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features.'
-          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/alpha3winners/ost-alpha3-winners-meta-data-image.jpg'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-alpha3-winners-og-image-2.png'
       :assets:
         :specific_css_required: 1
         :specific_js_required: 1
