--- a/config/locales/metadata/en.yml
+++ b/config/locales/metadata/en.yml
@@ -287,3 +287,25 @@ en:
       :assets:
         :specific_css_required: 1
         :specific_js_required: 1
+    roadmap:
+      :meta:
+        :title: 'OST | Roadmap'
+        :description:  'OST ⍺ III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features.'
+        :canonical: '%{canonical}'
+        :keywords:  'OST, Simple Token, OST Dev Challenge, Blockchain, OST POC, OST Wallet’'
+        :name: 'OST'
+        :robots: 'index, follow'
+        :og:
+          :title: 'OST | Alpha 3 Dev Challenge'
+          :description:  'OST ⍺ III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features.'
+          :type: 'website'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-alpha3-winners-og-image-2.png'
+          :url: '%{og_url}'
+        :twitter:
+          :card: 'summary_large_image'
+          :title: 'OST | Alpha 3 Dev Challenge'
+          :description:  'OST ⍺ III enabled developer teams to integrate OST-powered Branded Tokens into their apps using the OST KIT APIs & SDKs, and introduced the first wallet features.'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-alpha3-winners-og-image-2.png'
+      :assets:
+        :specific_css_required: 1
+        :specific_js_required: 1
