--- a/config/locales/metadata/en.yml
+++ b/config/locales/metadata/en.yml
@@ -155,6 +155,28 @@ en:
       :assets:
         :specific_css_required: 0
         :specific_js_required: 0
+    events_news:
+      :meta:
+        :title: 'OST | Events and News'
+        :description: 'The OST software platform helps businesses gain competitive advantage from blockchain and turn the potential of decentralization into reality.'
+        :canonical: '%{canonical}'
+        :keywords: 'OST, Simple Token, Utility Chain, Blockchain'
+        :name: 'OST'
+        :robots: 'index, follow'
+        :og:
+          :title: 'OST | Events and News'
+          :description: 'The OST software platform helps businesses gain competitive advantage from blockchain and turn the potential of decentralization into reality.'
+          :type: 'website'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-og-image-1.jpg'
+          :url: '%{og_url}'
+        :twitter:
+          :card: 'summary_large_image'
+          :title: 'OST | Events and News'
+          :description: 'The OST software platform helps businesses gain competitive advantage from blockchain and turn the potential of decentralization into reality.'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-og-image-1.jpg'
+      :assets:
+        :specific_css_required: 1
+        :specific_js_required: 1
     careers:
       :meta:
         :title: 'OST | Careers'
