--- a/config/locales/metadata/en.yml
+++ b/config/locales/metadata/en.yml
@@ -353,6 +353,28 @@ en:
           :assets:
             :specific_css_required: 1
             :specific_js_required: 0
+    features:
+      :meta:
+        :title: 'OST | Features'
+        :description: 'The OST Platform enables you to easily add brand currency into any app to strengthen direct-to-consumer relationships'
+        :canonical: '%{canonical}'
+        :keywords: 'OST, Simple Token, Utility Chain, Blockchain'
+        :name: 'OST'
+        :robots: 'index, follow'
+        :og:
+          :title: 'OST | Features'
+          :description: 'The OST Platform enables you to easily add brand currency into any app to strengthen direct-to-consumer relationships'
+          :type: 'website'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-platform-og-image-new-1.png'
+          :url: '%{og_url}'
+        :twitter:
+          :card: 'summary_large_image'
+          :title: 'OST | Features'
+          :description: 'The OST Platform enables you to easily add brand currency into any app to strengthen direct-to-consumer relationships'
+          :image: 'https://dxwfxs8b4lg24.cloudfront.net/ost/images/og-images/ost-platform-og-image-new-1.png'
+      :assets:
+        :specific_css_required: 1
+        :specific_js_required: 0
   web/ost_wallet:
     launch:
       :meta:
